# mart-api

./: compose.yaml  readme.md
auth_service/: .env  Dockerfile.dev
product_service/: .env  Dockerfile.dev  pyproject.toml
product_service/product_service/: database_engine.py  deps.py  main.py  settings.py
product_service/product_service/consumers/: product_consumer.py
product_service/product_service/crud/: product_crud.py
product_service/product_service/models/: product_models.py
todo/: .env
